[package]
name = "efs"
version = "0.1.0"
authors = ["RatCornu <ratcornu@skaven.org>"]
edition = "2021"
description = "An OS and architecture independent implementation of some Unix filesystems in Rust."
documentation = "https://ratcornu.github.io/efs/"
readme = "README.md"
homepage = "https://github.com/RatCornu/efs"
repository = "https://github.com/RatCornu/efs"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "no-std"]
categories = ["filesystem", "no-std"]

[lib]
name = "efs"
path = "src/lib.rs"

[dependencies]
derive_more = "0.99"
itertools = { version = "0.11", default-features = false, features = ["use_alloc"] }
no_std_io = "0.6.0"
once_cell = "1"
regex = "1"

[features]
default = ["no_std"]
no_std = []