[package]
name = "base"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "base"
path = "src/lib.rs"

[dependencies]
derive_more.workspace = true
itertools.workspace = true
no_std_io.workspace = true
once_cell.workspace = true
regex.workspace = true

[features]
default = []
std = []
