[package]
name = "efs"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "efs"
path = "src/lib.rs"

[dependencies]
base = { path = "../base" }
ext2 = { path = "../ext2", optional = true }

derive_more.workspace = true
itertools.workspace = true
no_std_io.workspace = true
once_cell.workspace = true
regex.workspace = true

[features]
default = ["ext2"]
ext2 = ["dep:ext2"]
std = ["base/std", "ext2/std"]
